/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/5.3.1/userguide/tutorial_java_projects.html
 */

plugins {
	// Apply the java plugin to add support for Java
	id 'java'

	// Apply the application plugin to add support for building an application
	id 'application'

	id "io.freefair.lombok" version "3.7.4"
}

repositories {
	// Use jcenter for resolving your dependencies.
	// You can declare any Maven/Ivy/file repository here.
	jcenter()
}

sourceCompatibility = JavaVersion.VERSION_12
targetCompatibility = JavaVersion.VERSION_12


tasks.withType(JavaCompile).each {
	it.options.compilerArgs.add('--enable-preview')
}

jar{
	manifest{
		attributes "Main-Class":"io.dkozak.home.control.server.Server"
	}

	from {
		configurations.compile.collect {
			it.isDirectory() ? it : zipTree(it)
		}
	}
}

tasks.test {
	useJUnitPlatform()
	jvmArgs("--enable-preview")
}

dependencies {
	compile(project(":sensors"))

	compile 'com.google.firebase:firebase-admin:6.8.1'
	implementation 'org.slf4j:slf4j-api:1.7.5'
	implementation 'org.slf4j:slf4j-log4j12:1.7.5'
	compileOnly 'org.projectlombok:lombok:1.18.8'
	annotationProcessor 'org.projectlombok:lombok:1.18.8'

	testCompile("org.assertj:assertj-core:3.11.1")
	testCompile("org.junit.jupiter:junit-jupiter-api:5.3.2")
	testRuntime("org.junit.jupiter:junit-jupiter-engine:5.3.2")

}
